--- a/processing_data.ipynb
+++ b/processing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x000001ACF94E9E40>\n",
+      "<_csv.reader object at 0x000002182CFA3F40>\n",
       "column names are Name\tCPU\tRAM\tGPU\tDISK\tDISPLAY\tOld Price\tNew Price\n",
       "processed 1 lines.\n",
       "processed 2 lines.\n",
@@ -251,17 +251,15 @@
       "processed 240 lines.\n",
       "processed 241 lines.\n",
       "processed 242 lines.\n",
-      "2: ['Laptop MSI Modern 14 B11MO 682VN (Core i3-1115G4 | 8GB | 256GB | Intel UHD | 14 inch FHD | Win 10 | Blue Stone) Intel® Core™ i3-1115G4  8GB(8GBx1)DDR4 3200MHz  Intel® UHD Graphics 256GB NVMe PCIe SSD 14 inch FHD (1920*1080)', ' 60Hz 72%NTSC IPS-Level', ' close to 100%sRGB\\t15390000\\t14990000']\n",
-      "['Laptop MSI Modern 14 B11MO 682VN (Core i3-1115G4 | 8GB | 256GB | Intel UHD | 14 inch FHD | Win 10 | Blue Stone) Intel® Core™ i3-1115G4  8GB(8GBx1)DDR4 3200MHz  Intel® UHD Graphics 256GB NVMe PCIe SSD 14 inch FHD (1920*1080)']\n",
       "processed 243 lines.\n",
       "processed 244 lines.\n",
       "processed 245 lines.\n",
       "processed 248 lines.\n",
-      "2: ['Laptop MSI GF63 Thin 11UC (Core™ i5-11400H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen) Intel® Core™ i5-11400H  8GB DDR4-3200Mhz (2 khe', ' tối đa 64GB)   NVIDIA® GeForce RTX 3050 Max-Q 4GB GDDR6    512GB NVMe PCIe Gen3x4 SSD  15.6 inch FHD (1920*1080)', ' 60Hz 72%NTSC IPS-Level', ' close to 100%sRGB\\t23990000\\tLiên hệ']\n",
-      "['Laptop MSI GF63 Thin 11UC (Core™ i5-11400H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen) Intel® Core™ i5-11400H  8GB DDR4-3200Mhz (2 khe']\n",
+      "2: ['Laptop MSI GF63 Thin 11UC (Core™ i5-11400H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen)\\tIntel® Core™ i5-11400H\\t8GB DDR4-3200Mhz (2 khe', ' tối đa 64GB)\\tNVIDIA® GeForce RTX 3050 Max-Q 4GB GDDR6\\t512GB NVMe PCIe Gen3x4 SSD\\t15.6 inch FHD (1920*1080)', ' 60Hz 72%NTSC IPS-Level', ' close to 100%sRGB\\t23990000\\tLiên hệ']\n",
+      "['Laptop MSI GF63 Thin 11UC (Core™ i5-11400H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen)', 'Intel® Core™ i5-11400H', '8GB DDR4-3200Mhz (2 khe']\n",
       "processed 249 lines.\n",
-      "2: ['Laptop MSI GF63 Thin 11UC (Core™ i7-11800H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen) Intel® Core™ i7-11800H  8GB DDR4-3200Mhz (2 khe', ' tối đa 64GB)   NVIDIA® GeForce RTX 3050 Max-Q 4GB GDDR6    512GB NVMe PCIe Gen3x4 SSD  15.6 inch FHD (1920*1080)', ' 60Hz 72%NTSC IPS-Level', ' close to 100%sRGB\\tNone\\tLiên hệ']\n",
-      "['Laptop MSI GF63 Thin 11UC (Core™ i7-11800H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen) Intel® Core™ i7-11800H  8GB DDR4-3200Mhz (2 khe']\n",
+      "2: ['Laptop MSI GF63 Thin 11UC (Core™ i7-11800H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen)\\tIntel® Core™ i7-11800H\\t8GB DDR4-3200Mhz (2 khe', ' tối đa 64GB)\\tNVIDIA® GeForce RTX 3050 Max-Q 4GB GDDR6\\t512GB NVMe PCIe Gen3x4 SSD\\t15.6 inch FHD (1920*1080)', ' 60Hz 72%NTSC IPS-Level', ' close to 100%sRGB\\tNone\\tLiên hệ']\n",
+      "['Laptop MSI GF63 Thin 11UC (Core™ i7-11800H | 8GB | 512GB | RTX 3050 4GB | 15.6 inch FHD | Win 10 | Đen)', 'Intel® Core™ i7-11800H', '8GB DDR4-3200Mhz (2 khe']\n",
       "processed 250 lines.\n",
       "processed 251 lines.\n",
       "processed 252 lines.\n",
@@ -631,7 +629,7 @@
       "processed 612 lines.\n",
       "processed 613 lines.\n",
       "processed 616 lines.\n",
-      "2: ['Laptop Asus ZenBook UX325EA-KG363T (i5 1135G7/8GB RAM/512GB SSD/13.3 FHD/Win10/Cáp USB to LAN', 'USB C-Audio/Xám)\\tIntel Core i5 1135G7\\t8GB\\tOnboard\\t512GB SSD\\t13.3 inch 4K Oled Cảm ứng\\t24299000\\t23999000']\n",
+      "2: ['Laptop Asus ZenBook UX325EA-KG363T (i5 1135G7/8GB RAM/512GB SSD/13.3 FHD/Win10/Cáp USB to LAN', 'USB C-Audio/Xám)\\tIntel Core i5 1135G7\\t8GB\\tOnboard\\t512GB SSD\\t13.3 FHD\\t24299000\\t23999000']\n",
       "['Laptop Asus ZenBook UX325EA-KG363T (i5 1135G7/8GB RAM/512GB SSD/13.3 FHD/Win10/Cáp USB to LAN']\n",
       "processed 617 lines.\n",
       "processed 618 lines.\n",
@@ -1399,7 +1397,7 @@
       "2: ['Laptop ACER Nitro 5 AN515-57-56S5 NH.QEKSV.001 ( 15.6\" Full HD/ 144Hz/Intel Core i5-11400H/8GB/512GB SSD/NVIDIA GeForce GTX 1650/Windows 11 Home/2.2kg)\\t Intel Core i5-11400H ( 2.7 GHz - 4.5 GHz / 12MB / 6 nhân', ' 12 luồng )\\t 1 x 8GB  DDR4  3200MHz ( 2 Khe cắm / Hỗ trợ tối đa 32GB )\\t NVIDIA GeForce GTX 1650  4GB  GDDR6 / Intel UHD Graphics \\t 512GB SSD M.2 NVMe /\\t\" 15.6\"\" ( 1920 x 1080 ) Full HD  IPS  144Hz ', ' không cảm ứng ', ' HD webcam \"\\t24990000\\t21990000']\n",
       "['Laptop ACER Nitro 5 AN515-57-56S5 NH.QEKSV.001 ( 15.6\" Full HD/ 144Hz/Intel Core i5-11400H/8GB/512GB SSD/NVIDIA GeForce GTX 1650/Windows 11 Home/2.2kg)', ' Intel Core i5-11400H ( 2.7 GHz - 4.5 GHz / 12MB / 6 nhân']\n",
       "processed 1222 lines.\n",
-      "101 invalid lines\n",
+      "100 invalid lines\n",
       "38 macbook lines\n",
       "len extracted 1221\n"
      ]
@@ -1444,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -1526,7 +1524,7 @@
       "['nVidia Geforce RTX 3060 6GB GDDR6', '15.6 inch FHD (1920 x 1080) 165Hz 3ms with ComfortView Plus']\n",
       "['nVidia Geforce RTX 3070 8GB GDDR6', '15.6 inch FHD (1920 x 1080) 165Hz 3ms with ComfortView Plus']\n",
       "['Intel® Iris® Xe Graphics', '14 inch FHD (1920*1080)']\n",
-      "['Intel Iris Xe Graphics', '13.3 inch Inch FHD (1920 x 1080) Anti-glare 1000_PCY']\n",
+      "['Intel Iris Xe Graphics', '13.3 Inch FHD (1920 x 1080) Anti-glare 1000_PCY']\n",
       "['NVIDIA® GeForce GTX 1650 Max Q 4GB GDDR6', '15.6 inch FHD (1920*1080)']\n",
       "['NVIDIA® GeForce RTX™ 3070 8GB GDDR6', '17.3 inch FHD (1920 x 1080) 16:9']\n",
       "['Intel® Iris® Xe Graphics', '13.5 inch QHD (2256 x 1504) IPS QHD LCD']\n",
@@ -1691,7 +1689,7 @@
       "['NVIDIA GeForce MX350 2GB GDDR5', '14.0 inch FHD (1920*1080) Active Pen - Cảm ứng']\n",
       "['AMD Redeon Graphics', '15.6-inch FHD (1920 x 1080) Anti-Glare LED Backlight']\n",
       "['Đồ họa Intel® Iris® Xe', '15.6 inch FHD(1920 x 1080) Anti-Glare']\n",
-      "['mac_gpu', 'mac_scr']\n",
+      "['Intel® UHD Graphics', '14 inch FHD (1920*1080)']\n",
       "['Intel® Iris® Xe Graphics', '14.0 inch FHD(1920 x 1080) Acer ComfyView™ IPS LED LCD']\n",
       "['Intel® UHD Graphics', '15.6-inch FHD (1920 x 1080) 16:9']\n",
       "['mac_gpu', 'mac_scr']\n",
@@ -2294,7 +2292,7 @@
       "['Onboard', '14.0 inch FHD']\n",
       "['Onboard', '14 inch FHD']\n",
       "['Onboard', '14 inch FHD']\n",
-      "['Onboard', '13.3 inch FHD Touch']\n",
+      "['Onboard', '13.3 FHD Touch']\n",
       "['NVIDIA RTX3060 6G', '15.6 inch FHD 165Hz']\n",
       "['Onboard', '15.6 inch FHD']\n",
       "['mac_gpu', 'mac_scr']\n",
@@ -2302,15 +2300,15 @@
       "['Onboard', '15.6 inch FHD']\n",
       "['Onboard', '14 inch FHD']\n",
       "['Onboard', '15.6 inch FHD']\n",
-      "['Onboard', '13.3 inch QHD']\n",
+      "['Onboard', '13.3 QWGA']\n",
       "['Intel Iris Xe Graphics', '15.6 inch FHD']\n",
       "['Onboard', '14 inch HD']\n",
       "['Onboard', '15.6 HD']\n",
-      "['Onboard', '13.3 inch FHD Cảm ứng']\n",
+      "['Onboard', '13.3 FHD Cảm ứng']\n",
       "['Onboard', '15.6 inch FHD']\n",
-      "['Onboard', '13.3 inch QWXGA']\n",
+      "['Onboard', '13.3 QWXGA']\n",
       "['NVIDIA RTX 3070 8GB', '15.6 inch WQHD 165hz']\n",
-      "['Onboard', '13.3 inch 4K Oled Cảm ứng']\n",
+      "['Onboard', '13.3 4K Oled Cảm ứng']\n",
       "['Onboard', '13.3 inch FHD']\n",
       "['Onboard', '14.0 inch FHD']\n",
       "['Onboard', '14.0 inch FHD']\n",
@@ -2344,8 +2342,8 @@
       "['NVIDIA RTX3070 8G', '15.6 inch FHD 165Hz']\n",
       "['mac_gpu', 'mac_scr']\n",
       "['Onboard', '15.6 inch FHD']\n",
-      "['Onboard', '13.3 inch FHD Touch']\n",
-      "['Onboard', '13.3 inch FHD Touch']\n",
+      "['Onboard', '13.3 FHD Touch']\n",
+      "['Onboard', '13.3 FHD Touch']\n",
       "['Nvidia RTX 3050 4G', '15.6 FHD 165hz']\n",
       "['Nvidia RTX 3050 4G', '15.6 FHD 165hz']\n",
       "['Onboard', '14inch FHD 72%NTSC']\n",
@@ -2429,8 +2427,8 @@
       "['Onboard', '14 inch FHD']\n",
       "['Onboard', '15.6 inch FHD']\n",
       "['MX450 2GB', '15.6 inch FHD']\n",
-      "['Onboard', '13.3 inch QHD']\n",
-      "['Onboard', '13.3 inch QHD']\n",
+      "['Onboard', '13.3 QHD']\n",
+      "['Onboard', '13.3 QHD']\n",
       "['Onboard', '14 inch FHD']\n",
       "['NVIDIA MX150 2GB', '15.6inch FHD']\n",
       "['MX330 2G', '15.6 inch FHD']\n",
@@ -2489,7 +2487,7 @@
       "['Onboard', '15 inch FHD cảm ứng']\n",
       "['Intel Iris Xe', '14 inch FHD']\n",
       "['Nvidia MX330 2GB', '14 inch FHD']\n",
-      "['Onboard', '13.3 inch WXGA']\n",
+      "['Onboard', '13.3 WXGA']\n",
       "['Onboard', '12.3 inch']\n",
       "['Onboard', '12.3 inch']\n",
       "['Onboard', '12.3 inch']\n",
@@ -2505,7 +2503,7 @@
       "['mac_gpu', 'mac_scr']\n",
       "['Onboard', '14 inch FHD']\n",
       "['Onboard', '14 inch FHD']\n",
-      "['Onboard', '13.3 inch FHD Touch']\n",
+      "['Onboard', '13.3 FHD Touch']\n",
       "['Onboard', '14 FHD Touch']\n",
       "['Onboard', '14 inch FHD']\n",
       "['Onboard', '14 inch FHD']\n",
@@ -2562,7 +2560,7 @@
       "['NVIDIA RTX 3050 4Gb', '16.1 FHD 144Hz']\n",
       "['NVIDIA RTX 3050Ti 4Gb', '16.1 FHD 144Hz']\n",
       "['NVIDIA RTX3070 Max Q 8G', '17.0 inch UHD 4K']\n",
-      "['Onboard', '13.3 inch FHD Cảm ứng']\n",
+      "['Onboard', '13.3 FHD Cảm ứng']\n",
       "['Onboard', '13.5 inch 2k']\n",
       "['Onboard', '13.5 inch 2k']\n",
       "['Onboard', '13.5 inch 2k']\n",
@@ -2721,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -2968,7 +2966,7 @@
       "['1', '2GB', '14.0', '1920*1080']\n",
       "['0', '0', '15.6', '1920 x 1080']\n",
       "['0', '0', '15.6', '1920 x 1080']\n",
-      "['0', '0', '13.3', '2560x1600']\n",
+      "['0', '0', '14', '1920*1080']\n",
       "['0', '0', '14.0', '1920 x 1080']\n",
       "['0', '0', '15.6', '1920 x 1080']\n",
       "['0', '0', '13.3', '2560x1600']\n",
@@ -3966,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -3978,7 +3976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
