--- a/Crawl_for_KHDL.ipynb
+++ b/Crawl_for_KHDL.ipynb
@@ -94,10 +94,9 @@
     "\n",
     "\n",
     "PATH = \"chromedriver\"\n",
-    "start-url = \"https://tuoitre.vn/tin-moi-nhat.htm\"\n",
-    "# crawl_url = \"https://www.hanoicomputer.vn/laptop\"\n",
-    "# phong_vu = \"https://phongvu.vn/laptop-macbook-scat.01-N001?sellerCategoryId=01-N001\"\n",
-    "# anphat = \"https://www.anphatpc.com.vn/may-tinh-xach-tay-laptop.html\""
+    "crawl_url = \"https://www.hanoicomputer.vn/laptop\"\n",
+    "phong_vu = \"https://phongvu.vn/laptop-macbook-scat.01-N001?sellerCategoryId=01-N001\"\n",
+    "anphat = \"https://www.anphatpc.com.vn/may-tinh-xach-tay-laptop.html\""
    ],
    "execution_count": null,
    "outputs": []
@@ -892,47 +891,11 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#none"
-   ],
+   "source": [],
    "metadata": {
-    "id": "sPrI9ZdtmrdR"
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "def crawl_tuoitre():\n",
-    "    driver.get(start_url)\n",
-    "    while 1:\n",
-    "        time.sleep(2)\n",
-    "        total_height = int(first_driver.execute_script(\"return document.body.scrollHeight\"))\n",
-    "\n",
-    "        for i in range(1, total_height, 100):\n",
-    "            first_driver.execute_script(\"window.scrollTo(0, {});\".format(i))\n",
-    "        item = first_driver.find_element_by_css_selector(\"#content > div > div.list-middle > div > div.w664.fl.stream-home.list-middle-content > div > div > div > a\")\n",
-    "        if items is None:\n",
-    "            break\n",
-    "    items = driver.find_element_by_class_name()\n"
-   ],
-   "metadata": {
-    "id": "VHSoYKNZmop2"
-   },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(/....)\n",
-    "name = [x for x in data[\"name\"]]"
-   ],
-   "metadata": {
-    "collapsed": false,
+    "id": "sPrI9ZdtmrdR",
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
