--- a/Crawl_and_Process/crawl/Crawl_details_laptop.ipynb
+++ b/Crawl_and_Process/crawl/Crawl_details_laptop.ipynb
@@ -167,13 +167,7 @@
     "if result[result.index(\"Card màn hình\") + 1] != \"Wireless\":\n",
     "    GPU.append(result[result.index(\"Card màn hình\") + 1])\n",
     "else:\n",
-    "    GPU.append(\"\")\n",
-    "print(PRODUCER[0])\n",
-    "print(CPU[0])\n",
-    "print(RAM[0])\n",
-    "print(DISK[0])\n",
-    "print(DISPLAY[0])\n",
-    "print(GPU[0])"
+    "    GPU.append(\"\")"
    ],
    "execution_count": null,
    "outputs": [
