--- a/Crawl_and_Process/crawl/Crawl_for_KHDL.ipynb
+++ b/Crawl_and_Process/crawl/Crawl_for_KHDL.ipynb
@@ -73,6 +73,10 @@
    },
    "source": [
     "from selenium import webdriver\n",
+    "import time\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import csv\n",
+    "import pandas as pd\n",
     "chrome_options = webdriver.ChromeOptions()\n",
     "chrome_options.add_argument('--headless')\n",
     "chrome_options.add_argument('--no-sandbox')\n",
@@ -87,15 +91,9 @@
     "id": "n_1v_kSRcHW1"
    },
    "source": [
-    "import time\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "import csv\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
     "PATH = \"chromedriver\"\n",
-    "crawl_url = \"https://www.hanoicomputer.vn/laptop\"\n",
-    "phong_vu = \"https://phongvu.vn/laptop-macbook-scat.01-N001?sellerCategoryId=01-N001\"\n",
+    "hacom = \"https://www.hanoicomputer.vn/laptop\"\n",
+    "phong_vu = \"https://phongvu.vn/laptop\"\n",
     "anphat = \"https://www.anphatpc.com.vn/may-tinh-xach-tay-laptop.html\""
    ],
    "execution_count": null,
@@ -146,14 +144,11 @@
     "        items = first_driver.find_elements_by_class_name(\"p-component\")\n",
     "        if len(items) == 0:\n",
     "            break\n",
-    "        total = len(items)\n",
     "        for item in items:\n",
     "            print(\"Crawl \", items.index(item))\n",
     "            pre_name = item.find_element_by_css_selector(\"h3.p-name\")\n",
     "            name = pre_name.find_element_by_css_selector(\"a\").text\n",
     "            url_item = pre_name.find_element_by_css_selector(\"a\").get_attribute(\"href\")\n",
-    "\n",
-    "            # open second chrome to get more version laptop\n",
     "            second_driver.get(url_item)\n",
     "            time.sleep(2)\n",
     "            second_height = int(second_driver.execute_script(\"return document.body.scrollHeight\") / 10)\n",
@@ -189,7 +184,7 @@
     "second_driver = webdriver.Chrome(PATH,chrome_options=chrome_options)\n",
     "second_driver.maximize_window()\n",
     "    \n",
-    "name, link = crawl_data(first_driver, second_driver, crawl_url)\n",
+    "name, link = crawl_data(first_driver, second_driver, hacom)\n",
     "data = pd.DataFrame({\"Name\" : name, \"Link\" : link})\n",
     "data.to_csv(\"Crawl_Search_HN_CPT.csv\", sep=\"\\t\", index=None)"
    ],
